--- a/README
+++ b/README
@@ -1,3 +1,8 @@
-This module is not really finished yet. Need to :
- * Review the code (a lot of trash and useless things)
- * Test how it installs locally before submitting to CPAN
+The state of this module is currently :
+
+ * Passes prove (all tests)
+ * Works (for me)
+ * Has documentation
+ 
+The JSON code/feature is not in the same standard of the module usage but is there. Some design mistakes should be fixed
+in order to cope with environments of few hundred thousand jobs. It will do the job for most of the users.
